--- a/ui/src/main/webapp/index.html
+++ b/ui/src/main/webapp/index.html
@@ -37,6 +37,10 @@
     <script src="lib/angular/js/angular-messages.min.js"></script>
     <script src="lib/md-data-table/js/md-data-table.min.js"></script>
     <script src="lib/moment/moment-with-locales.min.js"></script>
+
+    <script src="lib/chart/js/chart.min.js"></script>
+    <script src="lib/angular-chart/js/angular-chart.min.js"></script>
+
     <!-- app -->
     <script src="app/app.js"></script>
     <!-- services -->
