--- a/ui/src/main/webapp/index.html
+++ b/ui/src/main/webapp/index.html
@@ -61,6 +61,7 @@
     <script src="app/schema/schema-view-service.js"></script>
     <script src="app/settings/settings-service.js"></script>
     <script src="app/table/table-service.js"></script>
+    <script src="app/chart/chart-service.js"></script>
     <script src="app/query/view-builder/view-service.js"></script>
     <script src="app/query/query-page-service.js"></script>
     <script src="app/query/input-manager/input-service.js"></script>
@@ -86,6 +87,7 @@
     <script src="app/query/input-manager/pair-builder/pair-builder-component.js"></script>
     <script src="app/settings/settings-component.js"></script>
     <script src="app/table/table-component.js"></script>
+    <script src="app/chart/chart-component.js"></script>
     <script src="app/query/operation-selector/operation-selector-component.js"></script>
     <script src="app/query/input-manager/input-manager-component.js"></script>
     <script src="app/query/parameter-form/parameter-form-component.js"></script>
